--- a/6_bio_data.html
+++ b/6_bio_data.html
@@ -11,7 +11,7 @@ background-color: pink;
 <h2 style="background-color:blue;color:white">PERSONAL DETAILS</h2>
 <ul>
 <li>DOB:17/01/2004</li>
-<li>GENDER:FEMALE</li>
+<li>GENDER:Female</li>
 <li>ADDRESS:Puthan Purikkal House,Chemmaniyode</li>
 </ul>
 </div>
