--- a/6_bio_data.html
+++ b/6_bio_data.html
@@ -1,6 +1,6 @@
 <html>
 <title>Bio data</title>
-<center><h1 style="color:red">MY NAME</h1></center>
+<center><h1 style="color:red">NAVASREE K S</h1></center>
 <style>
 body{
 background-color: pink;
@@ -11,8 +11,8 @@ background-color: pink;
 <h2 style="background-color:blue;color:white">PERSONAL DETAILS</h2>
 <ul>
 <li>DOB:17/01/2004</li>
-<li>GENDER: FEMALE</li>
-<li>ADDRESS: abc street,Chennai,pincode:1234567</li>
+<li>GENDER:Female</li>
+<li>ADDRESS:Puthan Purikkal House,Chemmaniyode</li>
 </ul>
 </div>
 <div>
@@ -27,12 +27,13 @@ background-color: pink;
 <ul>
 <li>Programming</li>
 <li>Reading</li>
-<li>Hiking</li>
+<li>Drawing</li>
 </ul>
 </div>
 <div>
 <h2 style="background-color:blue;color:white">CONTACT DETAILS</h2>
-<p style="border:1px solid black">Email:abcdefg@gmail.com</p>
-<p style="border:1px solid black">Mobile No: +1254789653</p>
+<p style="border:1px solid black">Email:ksnavasree@gmail.com</p>
+<p style="border:1px solid black">Mobile No: +91 7305535838</p>
 </div>
 </body>
+</html>
